--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "SG_TC_Locate",
+  "name": "SG_TC",
   "short_name": "SG_TC",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
@@ -20,6 +20,11 @@
     {
       "src": "images/icons/icon-128x128.png",
       "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-144x144.png",
+      "sizes": "144x144",
       "type": "image/png"
     },
     {
